# ChangeLog for dev-perl/Template-Toolkit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Template-Toolkit/ChangeLog,v 1.67 2012/01/24 15:19:34 tove Exp $

*Template-Toolkit-2.230.0 (24 Jan 2012)

  24 Jan 2012; Torsten Veller <tove@gentoo.org>
  +Template-Toolkit-2.230.0.ebuild:
  Version bump

  01 Dec 2011; Torsten Veller <tove@gentoo.org>
  Template-Toolkit-2.220.0.ebuild:
  Add missing RDEPEND. Thanks to Tiziano Müller. Drop src_unpack

  04 Sep 2011; Torsten Veller <tove@gentoo.org>
  -Template-Toolkit-2.22-r1.ebuild:
  Cleanup

*Template-Toolkit-2.220.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org>
  +Template-Toolkit-2.220.0.ebuild:
  Change version scheme

  03 Dec 2010; Michael Weber <xmw@gentoo.org> Template-Toolkit-2.22-r1.ebuild:
  add ~arm (bug 302981)

*Template-Toolkit-2.22-r1 (10 Jan 2010)

  10 Jan 2010; Torsten Veller <tove@gentoo.org>
  +Template-Toolkit-2.22-r1.ebuild:
  Add app-vim/tt2-syntax dependency (#191500)

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  Template-Toolkit-2.22.ebuild:
  Fixed for Prefix and marked ~x86-solaris, bug #296509

  12 Oct 2009; Torsten Veller <tove@gentoo.org>
  -Template-Toolkit-2.19.ebuild:
  Cleanup

  27 Sep 2009; Brent Baude <ranger@gentoo.org> Template-Toolkit-2.22.ebuild:
  Marking Template-Toolkit-2.22 ppc64 for bug 283947

  19 Sep 2009; nixnut <nixnut@gentoo.org> Template-Toolkit-2.22.ebuild:
  ppc stable #283947

  18 Sep 2009; Torsten Veller <tove@gentoo.org>
  Template-Toolkit-2.22.ebuild:
  Stable on amd64 (#283947)

  11 Sep 2009; Raúl Porcel <armin76@gentoo.org>
  Template-Toolkit-2.22.ebuild:
  alpha/ia64/sparc stable wrt #283947

  10 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  Template-Toolkit-2.22.ebuild:
  stable x86, bug 283947

  07 Sep 2009; Torsten Veller <tove@gentoo.org>
  -Template-Toolkit-2.20.ebuild:
  Cleanup

*Template-Toolkit-2.22 (22 Jul 2009)
