@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Template-Toolkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Template-Toolkit/ChangeLog,v 1.67 2012/01/24 15:19:34 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Template-Toolkit/ChangeLog,v 1.68 2012/02/12 19:56:30 tove Exp $
+
+*Template-Toolkit-2.240.0 (12 Feb 2012)
+
+  12 Feb 2012; Torsten Veller <tove@gentoo.org>
+  +Template-Toolkit-2.240.0.ebuild:
+  Version bump
 
 *Template-Toolkit-2.230.0 (24 Jan 2012)
 
